# NHK2026_auto_robot_v2

./: README.md  package.xml  readme.md  setup.cfg  setup.py
auto_robot/: control_box_arm_action_node.py  control_box_arm_node.py  control_over_steps_action_node.py  control_over_steps_node.py  control_spear_action_node.py  correcting_pos_on_step_action_node.py  follow_spline_node.py  joy2twist_node.py  publish_feedback_node.py  publish_odom_node.py  robot_client_node.py  subscribe_twist_auto_node.py  subscribe_twist_node.py  switch_localization_action_node.py
auto_robot_v2/: control_box_arm_action_node.py  control_over_steps_action_node.py  control_spear_action_node.py  correcting_pos_on_step_action_node.py  detect_aruco_action_node.py  follow_spline_node.py  is_vgoal_action_node.py  joy2twist_node.py  move_on_steps_action_node.py  move_on_steps_action_node_v2.py  omni_pure_pursuit_action_node.py  omni_pure_pursuit_action_node_v2.py  publish_feedback_node.py  publish_odom_node.py  record_path_node.py  robot_client_node.py  subscribe_twist_node.py  switch_localization_action_node.py
config/: dyna_params.yaml  ekf.yaml  laser_filter.yaml  nav2_params.yaml  omni_pure_pursuit.yaml  omni_pure_pursuit_map.yaml  omni_pure_pursuit_odom.yaml  slam_params.yaml
launch/: action_nodes_launch.py  auto_nav2_launch.py  base_launch.py  lidar_launch.py  manual_launch.py  navigation_launch.py  over_steps_test_launch.py  record_path_launch.py  record_path_map_launch.py  record_path_odom_launch.py  slam_bringup_launch.py  static_tf_launch.py
map/: c419_map.pgm  c419_map.yaml
(+22 files in other folders)
