<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auto_robot_v2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="aratahorie89@gmail.com">aratahorie</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>sllidar_ros2</exec_depend>
  <exec_depend>laser_filters</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
